# game-saving-sync

./: .gitignore  README.md  package_app.bat  pyproject.toml  run_tests.bat  setup_dev.bat  verify_mvp.bat
docs/: CONSTRUCTURE.md  PACKAGING.md  PHASE_1_FOUNDATION.md  PHASE_2_P2P_TRANSFER.md  PHASE_3_BACKUP.md  PHASE_4_GUI.md  PHASE_5_TESTING.md  QUICKSTART.md  RELAY_SERVER.md  ROADMAP.md  TECH_STACK_UPDATE.md
src/: __init__.py  config.py  main.py  p2p_transport.py  received_installer.py  relay_client.py  relay_server.py  save_discovery.py  save_package_builder.py  steam_library.py  utils.py
src/ui/: main_window.py
tests/: test_config.py  test_p2p_transport.py  test_received_installer.py  test_relay_server_client.py  test_save_discovery.py  test_save_package_builder.py  test_steam_library.py  test_utils.py
