[project]
name = "game-save-transfer"
version = "0.2.0"
description = "Small-scale peer-to-peer game save transfer desktop tool"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Game Save Transfer Team"}
]
readme = "README.md"
dependencies = [
    "PySide6>=6.6.0",
    "PySide6-Fluent-Widgets>=1.11.2",
    "httpx>=0.27.0",
    "segno>=1.6.0",
    "Pillow>=10.2.0",
    "winotify>=1.1.0; platform_system == 'Windows'",
    "plyer>=2.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "psutil>=5.9.8",
    "loguru>=0.7.2",
    "py7zr>=0.21.0",
]

[dependency-groups]
dev = [
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pyinstaller>=6.3.0",
    "pytest>=8.0.0",
    "pytest-qt>=4.3.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
